Starting to migrate `ClusterAdapter`.